# AlienFxLite

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  INSTALL  README  README.md  install.sh  uk_co_progger_alienFXLite_led_LEDController.h
CMakeModules/: FindJNI2.cmake  README
linuxLibSrc/: main.cpp
src/cpp/: LEDController.h  main.cpp
src/java/uk/co/progger/alienFXLite/: AlienFXProperties.java  Launcher.java  Main.java  SourcesLib.cmake
src/java/uk/co/progger/alienFXLite/alienfx/: AlienFXAction.java  AlienFXActionBlink.java  AlienFXEngine.java  AlienFXProfile.java  AlienFXProfileSetting.java  AlienFXProfiles.java
src/java/uk/co/progger/alienFXLite/gui/: ActionPanel.java  ActionPanelFX.java  AddActionPanel.java  AlienFXLiteGUIConstants.java  AlienFXResources.java  AlienFXTexts.java  ColorBasePanel.java  ColorModel.java  ColorPanel.java  ColorUsedPanel.java  DashedBorder.java  DeviceInfoPanel.java  DropDownButton.java  JXTrayIcon.java  MainFrame.java  ProfileModel.java  ProfilePanel.java  ProfileSelectionPanel.java  RegionPanel.java
src/java/uk/co/progger/alienFXLite/led/: AlienFXAllPowerFull.java  AlienFXArea51Controller.java  AlienFXCommunicationException.java  AlienFXController.java  AlienFXControllerFactory.java  AlienFXControllerNotFoundException.java  AlienFXControllerUnknownDeviceException.java  AlienFXM14xController.java  AlienFXM14xR2Controller.java  AlienFXM14xR3Controller.java  AlienFXM17xController.java  AlienFXM17xR3Controller.java  AlienFXM18xR2Controller.java  AlienFXRegion.java  LEDController.java
src/uk/co/progger/alienFXLite/: AlienFXProperties.java  JarClassLoader.java  SourcesLib.cmake
src/uk/co/progger/alienFXLite/alienfx/: AlienFXActionColor.java  AlienFXActionMorph.java  AlienFXProfiles.java
src/uk/co/progger/alienFXLite/gui/: ActionClipboard.java  ActionPanelFX.java  AlienFXAlreadyRunningException.java  AlienFXLiteGUIConstants.java  ColorChooserPanel.java  DropDownButton.java  MainFrame.java  ProfilePanel.java  ProfileSelectionPanel.java
src/uk/co/progger/alienFXLite/led/: AlienFXAllPowerFull.java  AlienFXController.java  AlienFXControllerFactory.java  AlienFXPowerMode.java
windowsLibSrc/: Alien.sln
